tests/snapshots/tui/dataset_empty_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare                            rust_expert "
"╭ data ──────────────────────────────────────────────╮╭ topic ─────────────────────────────────────────────────────────╮"
"│   ownership  0 sub, 0 q, 0 a                       ││ ownership                                                      │"
"│   traits  0 sub, 0 q, 0 a                          ││ Moves, borrows and lifetimes in Rust                           │"
"│                                                    ││ configured: 2 subtopics, 3 questions each                      │"
"│ No data yet: press r to generate subtopics,        ││ subtopics 0, questions 0, answers 0, unanswered 0              │"
"│ questions and answers.                             ││                                                                │"
"│                                                    ││                                                                │"
"│ r generates data · t trains · ? all keys           ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"╰ / filter ──────────────────────────────────────────╯╰─────────────────────────────────────────────────────────── 4/4 ╯"
" j/k move · l open · / filter · s stats · e edit · d delete · [ ] parts                                  v#.#.#  ? help "
