tests/snapshots/tui/dataset_empty_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  rust_ex… "
"╭ data ────────────────────────────╮╭ topic ───────────────────────────────────╮"
"│   ownership  0 sub, 0 q, 0 a     ││ ownership                                │"
"│   traits  0 sub, 0 q, 0 a        ││ Moves, borrows and lifetimes in Rust     │"
"│                                  ││ configured: 2 subtopics, 3 questions     │"
"│ No data yet: press r to generate ││ each                                     │"
"│ subtopics, questions and         ││ subtopics 0, questions 0, answers 0,     │"
"│ answers.                         ││ unanswered 0                             │"
"│                                  ││                                          │"
"│ r generates data · t trains      ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"╰ / filter ────────────────────────╯╰───────────────────────────────────── 6/6 ╯"
" j/k move · l open · / filter · s stats · e edit · d delete      v#.#.#  ? help "
