tests/snapshots/tui/dataset_error_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare                            rust_expert "
"╭ data ────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ✗ data/answers.jsonl:3: invalid record: expected value at line 1 column 2                                            │"
"│ R reloads                                                                                                            │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" j/k move · l open · / filter · s stats · e edit · d delete · [ ] parts                                  v#.#.#  ? help "
