tests/snapshots/tui/dataset_error_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare"
"╭ data ────────────────────────────────────────────────────────────────────────╮"
"│ ✗ data/answers.jsonl:3: invalid record: expected value at line 1 column 2    │"
"│ R reloads                                                                    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" j/k move · l open · / filter · s stats · e edit · d delete      v#.#.#  ? help "
