tests/snapshots/tui/dataset_filter_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Dataset  2 Pipeline  3 Training  4 Logs          rust_expert "
"╭ data: 4 matches ─────────────────╮╭ topic ───────────────────────────────────╮"
"│ ▼ ownership  2 sub, 5 q, 4 a     ││ ownership                                │"
"│   ▼ Borrowing  3 q, 2 a          ││ Moves, borrows and lifetimes in Rust     │"
"│     ▶ [a] What happens to a borr ││ configured: 2 subtopics, 3 questions     │"
"│     ▶ [x] Why can't a &mut and a ││ each                                     │"
"│       [ ] When does NLL end a bo ││ subtopics 2, questions 5, answers 4,     │"
"│                                  ││ unanswered 1                             │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"╰ filter: BORROW (Esc clears) ─────╯╰───────────────────────────────────── 6/6 ╯"
" j/k move · l open · / filter · s stats · e edit · d delete      v#.#.#  ? help "
