tests/snapshots/tui/dataset_filter_typing_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Dataset  2 Pipeline  3 Training  4 Logs                                                  rust_expert "
"╭ data ──────────────────────────────────────────────╮╭ topic ─────────────────────────────────────────────────────────╮"
"│ ▶ ownership  2 sub, 5 q, 4 a                       ││ ownership                                                      │"
"│   traits  0 sub, 0 q, 0 a                          ││ Moves, borrows and lifetimes in Rust                           │"
"│ ▶ old_topic (not configured)  1 sub, 1 q, 1 a      ││ configured: 2 subtopics, 3 questions each                      │"
"│                                                    ││ subtopics 2, questions 5, answers 4, unanswered 1              │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"╰ /bo ───────────────────────────────────────────────╯╰─────────────────────────────────────────────────────────── 4/4 ╯"
" Enter keep · Esc clear                                                                                  v#.#.#  ? help "
