tests/snapshots/tui/dataset_filter_typing_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ 1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare  rust_expert "
"╭ data ────────────────────────────╮╭ topic ───────────────────────────────────╮"
"│ ▶ ownership  2 sub, 5 q, 4 a     ││ ownership                                │"
"│   traits  0 sub, 0 q, 0 a        ││ Moves, borrows and lifetimes in Rust     │"
"│ ▶ old_topic (not configured)     ││ configured: 2 subtopics, 3 questions     │"
"│                                  ││ each                                     │"
"│                                  ││ subtopics 2, questions 5, answers 4,     │"
"│                                  ││ unanswered 1                             │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"╰ /bo ─────────────────────────────╯╰───────────────────────────────────── 6/6 ╯"
" Enter keep · Esc clear                                          v#.#.#  ? help "
