tests/snapshots/tui/dataset_leftovers_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Dataset  2 Pipeline  3 Training  4 Logs                                                  rust_expert "
"╭ data ──────────────────────────────────────────────╮╭ topic ─────────────────────────────────────────────────────────╮"
"│ ▼ ownership  2 sub, 5 q, 4 a                       ││ old_topic                                                      │"
"│   ▶ Borrowing  3 q, 2 a                            ││ not in overbrainer.toml: split counts its answers as orphaned  │"
"│   ▶ Lifetimes  1 q, 1 a                            ││ subtopics 1, questions 1, answers 1, unanswered 0              │"
"│   ▶ (missing subtopic)  1 q, 1 a                   ││                                                                │"
"│   traits  0 sub, 0 q, 0 a                          ││                                                                │"
"│ ▼ old_topic (not configured)  1 sub, 1 q, 1 a      ││                                                                │"
"│   ▶ Legacy  1 q, 1 a                               ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"╰ / filter ──────────────────────────────────────────╯╰─────────────────────────────────────────────────────────── 3/3 ╯"
" j/k move · l open · / filter · s stats · e edit · d delete                                              v#.#.#  ? help "
