tests/snapshots/tui/dataset_leftovers_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Dataset  2 Pipeline  3 Training  4 Logs          rust_expert "
"╭ data ────────────────────────────╮╭ topic ───────────────────────────────────╮"
"│ ▼ ownership  2 sub, 5 q, 4 a     ││ old_topic                                │"
"│   ▶ Borrowing  3 q, 2 a          ││ not in overbrainer.toml: split counts    │"
"│   ▶ Lifetimes  1 q, 1 a          ││ its answers as orphaned                  │"
"│   ▶ (missing subtopic)  1 q, 1 a ││ subtopics 1, questions 1, answers 1,     │"
"│   traits  0 sub, 0 q, 0 a        ││ unanswered 0                             │"
"│ ▼ old_topic (not configured)     ││                                          │"
"│   ▶ Legacy  1 q, 1 a             ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"╰ / filter ────────────────────────╯╰───────────────────────────────────── 5/5 ╯"
" j/k move · l open · / filter · s stats · e edit · d delete      v#.#.#  ? help "
