tests/snapshots/tui/dataset_newer_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Dataset  2 Pipeline  3 Training  4 Logs                                                  rust_expert "
"╭ data ──────────────────────────────────────────────╮╭ topic ─────────────────────────────────────────────────────────╮"
"│ ▶ ownership  2 sub, 5 q, 4 a                       ││ ownership                                                      │"
"│   traits  0 sub, 0 q, 0 a                          ││ Moves, borrows and lifetimes in Rust                           │"
"│ ▶ old_topic (not configured)  1 sub, 1 q, 1 a      ││ configured: 2 subtopics, 3 questions each                      │"
"│                                                    ││ subtopics 2, questions 5, answers 4, unanswered 1              │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"╰ / filter ──────────────────────────────────────────╯╰─────────────────────────────────────────────────────────── 4/4 ╯"
" j/k move · l open · / filter · s stats · e edit · d delete · [ ] parts                          v#.#.# ↑ 0.9.0  ? help "
